# example-minimal-bootloader-rp2040-rs

./: .gitignore  Cargo.toml  Makefile  README.md  demo
.cargo/: config.toml
.github/workflows/: ci.yml
crispy-bootloader/: Cargo.toml
crispy-bootloader/src/: boot.rs  flash.rs  main.rs  peripherals.rs  update.rs  usb_transport.rs
crispy-common/: Cargo.toml
crispy-common/src/: boot_fsm.rs  cobs.rs  flash.rs  lib.rs  protocol.rs
crispy-common/tests/: boot_fsm_tests.rs  protocol_tests.rs
crispy-fw-sample/: Cargo.toml
crispy-fw-sample-cpp/: CMakeLists.txt  main.cpp  main_minimal.cpp  memmap_crispy.ld  pico_sdk_import.cmake
crispy-fw-sample-rs/: Cargo.toml  build.rs
crispy-fw-sample-rs/src/: main.rs
crispy-fw-sample-rs/tests/: build_tests.rs
crispy-fw-sample/src/: main.rs
crispy-sdk-cpp/: CMakeLists.txt  README.md
crispy-sdk-cpp/include/crispy/: boot_data.h  commands.h  crispy.h  protocol.h
crispy-sdk-cpp/src/: boot_data.cpp  commands.cpp
crispy-upload/: Cargo.toml
crispy-upload/src/: cli.rs  commands.rs  main.rs  transport.rs
linker_scripts/: bootloader_rp2040.x
scripts/: build-combined.sh  test-integration.sh
scripts/python/: .coverage  README.md  crispy_upload.py
scripts/python/crispy_protocol/: __init__.py  cobs.py  crc32.py  protocol.py  transport.py  varint.py
scripts/python/tests/: __init__.py  conftest.py  test_cobs.py  test_crc32.py  test_integration.py  test_protocol.py  test_transport.py  test_varint.py
