[package]
name = "crispy-common"
version = "0.2.0"
edition = "2021"
license = "MIT"

[features]
default = []
std = ["serde/std", "postcard/use-std"]
embedded = ["rp2040-hal", "embedded-hal", "cortex-m"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
heapless = { version = "0.8", features = ["serde"] }
postcard = { version = "1", default-features = false, features = ["heapless"] }

# Optional embedded dependencies
rp2040-hal = { version = "0.11", features = ["rt", "critical-section-impl"], optional = true }
embedded-hal = { version = "1.0.0", optional = true }
cortex-m = { version = "0.7", optional = true }
