[package]
name = "crispy-fw-sample-rs"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
crispy-common = { path = "../crispy-common", features = ["embedded"] }
rp2040-hal = { version = "0.11", features = ["rt", "critical-section-impl"] }
cortex-m = "0.7"
cortex-m-rt = "0.7"
crc = { version = "3", default-features = false }
usb-device = "0.3"
usbd-serial = "0.2"
embedded-hal = "1.0.0"
panic-probe = { version = "1", features = ["print-defmt"] }
defmt = "1"
defmt-rtt = "1"
