[package]
name = "crispy-upload"
version = "0.2.0"
edition.workspace = true
license.workspace = true
description = "Firmware upload tool for crispy-bootloader via USB CDC"

[dependencies]
crispy-common = { path = "../crispy-common", features = ["std"] }
serialport = "4"
postcard = { version = "1", features = ["use-std"] }
clap = { version = "4", features = ["derive"] }
crc = "3"
indicatif = "0.17"
anyhow = "1"
